Update rnj_1_instruct notebook

--- a/examples/notebooks/grpo_rnj_1_instruct.ipynb
+++ b/examples/notebooks/grpo_rnj_1_instruct.ipynb
@@ -107,7 +107,7 @@
       "source": [
         "In addition to the current columns, we also include a custom system prompt to tell the model how we'd like the generation.\n",
         "\n",
-        "The system prompt is adapted version of the original extracted from DeepSeek R1. Refer to [this previous recipe](https://huggingface.co/learn/cookbook/fine_tuning_llm_grpo_trl) for more details.\n",
+        "This system prompt is an adapted version of the original one extracted from **DeepSeek R1**. For additional background, see [this previous recipe](https://huggingface.co/learn/cookbook/fine_tuning_llm_grpo_trl). We extend the prompt with **examples** and a **more explicit, verbose formulation** to make the desired behavior easier for the model to learn. Depending on your goals, you may further enrich the prompt to simplify learning, or intentionally shorten and harden it to encourage more robust and generalizable behavior.\n",
         "\n",
         "We convert the dataset samples into conversation samples, including the system prompt and problem description per sample, since this is how the GRPO trainer expects them.\n",
         "\n",
@@ -279,7 +279,10 @@
         "We'll configure **GRPO** using `GRPOConfig`, keeping the parameters minimal so the training fits on a Colab instance. You can adjust these settings depending on the resources available. For full details on all available parameters, check the [TRL GRPOConfig documentation](https://huggingface.co/docs/trl/sft_trainer#trl.GRPOConfig).\n",
         "\n",
         "First, we need to define the rewards functions that the training algorithm will use to improve the model. In this case, we'll include just one reward function.\n",
-        "We'll use a format reward that will reward the model when the output includes `<think>` and `<answer>` tags. This is a simplification of the pipeline for educational purposes, but in a real scenario, you'd at least all need a reward function to check the correctness of the model answer. The function has been extracted from [here](https://github.com/huggingface/open-r1/blob/main/src/open_r1/rewards.py)."
+        "We'll use a format reward that will reward the model when the output includes `<think>` and `<answer>` tags. This is a simplification of the pipeline for educational purposes, but in a real scenario, you'd at least all need a reward function to check the correctness of the model answer. The function has been extracted from [here](https://github.com/huggingface/open-r1/blob/main/src/open_r1/rewards.py).\n",
+        "\n",
+        "> 💡 **Note**:  \n",
+        "> You can further refine this reward by making it more granular. For example, assigning partial rewards when `<think>` and `<answer>` appear independently, or when they are present but incorrectly ordered. This can make the learning signal denser and speed up early training. However, overly simplifying the reward may reduce robustness, even if it helps the model converge faster. In practice, there is a trade-off between ease of learning and the generalization quality of the final model."
       ]
     },
     {
@@ -338,7 +341,7 @@
         "    # Parameters that control the data preprocessing\n",
         "    per_device_train_batch_size=8,\n",
         "    max_completion_length=256, # default: 256             # Max completion length produced during training\n",
-        "    num_generations=8, # default: 8                  # Number of generations produced during trainig for comparison\n",
+        "    num_generations=8, # default: 8                       # Number of generations produced during trainig for comparison\n",
         "    max_prompt_length=512,  # default: 512                # Max prompt lenght of the input prompt used for generation during training\n",
         "\n",
         "    # Parameters related to reporting and saving\n",
@@ -582,8 +585,6 @@
       },
       "outputs": [],
       "source": [
-        "import torch\n",
-        "\n",
         "input_ids = tokenizer.apply_chat_template(\n",
         "    messages,\n",
         "    add_generation_prompt=True,\n",
@@ -607,14 +608,14 @@
     }
   ],
   "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "gpuType": "A100",
+      "provenance": []
+    },
     "language_info": {
       "name": "python"
-    },
-    "colab": {
-      "provenance": [],
-      "gpuType": "A100"
-    },
-    "accelerator": "GPU"
+    }
   },
   "nbformat": 4,
   "nbformat_minor": 0
