--- a/examples/notebooks/grpo_agent.ipynb
+++ b/examples/notebooks/grpo_agent.ipynb
@@ -40,7 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install -Uq trl git+https://github.com/huggingface/transformers.git trackio vllm==0.11.2 jmespath"
+    "!pip install -Uq \"trl[vllm]\" git+https://github.com/huggingface/transformers.git trackio jmespath "
    ]
   },
   {
