--- a/examples/notebooks/grpo_trl_lora_qlora.ipynb
+++ b/examples/notebooks/grpo_trl_lora_qlora.ipynb
@@ -19,7 +19,7 @@
       "source": [
         "![trl banner](https://huggingface.co/datasets/trl-lib/documentation-images/resolve/main/trl_banner_dark.png)\n",
         "\n",
-        "Easily fine-tune **Large Language Models (LLMs)** or **Vision-Language Models (VLMs)** with **LoRA** or **QLoRA** using the [**Transformers Reinforcement Learning (TRL)**](https://github.com/huggingface/trl) library by Hugging Face — all within a **free Google Colab notebook** powered by a **T4 GPU**.\n",
+        "Easily fine-tune **Large Language Models (LLMs)** or **Vision-Language Models (VLMs)** with **LoRA** or **QLoRA** using the [**Transformers Reinforcement Learning (TRL)**](https://github.com/huggingface/trl) library by Hugging Face and Group Relative Policy Optimization (GRPO) — all within a **free Google Colab notebook** powered by a **T4 GPU**.\n",
         "\n",
         "Thanks to the **built-in memory and training optimizations in TRL**, including LoRA, quantization, gradient checkpointing, and optimized attention kernels, it is possible to **fine-tune a 7B model on a free T4** with a **~7× reduction in memory consumption** compared to naive FP16 training.\n",
         "\n",
@@ -62,7 +62,7 @@
         "\n",
         "> A small trade-off in training speed is observed, but the **VRAM reduction is the key enabler**. For faster training on compatible hardware, **vLLM** can also be leveraged.\n",
         "\n",
-        "> Note: For a fair comparison, the number of generations and the batch size were not changed."
+        "> 💡 Note: For a fair comparison, the number of generations and the batch size were not changed."
       ]
     },
     {
@@ -73,7 +73,7 @@
       "source": [
         "## Install dependencies\n",
         "\n",
-        "We'll install **TRL** with the **PEFT** extra, which ensures all main dependencies such as **Transformers** and **PEFT** (a package for parameter-efficient fine-tuning, e.g., LoRA/QLoRA) are included. Additionally, we'll install **trackio** to log and monitor our experiments, **bitsandbytes** to enable quantization of LLMs, reducing memory consumption for both inference and training, **liger-kernel** for more efficient training, and **vLLM** to improve training throughput."
+        "We'll install **TRL** with the **PEFT** extra, which ensures all main dependencies such as **Transformers** and **PEFT** (a package for parameter-efficient fine-tuning, e.g., LoRA/QLoRA) are included. Additionally, we'll install **trackio** to log and monitor our experiments, **bitsandbytes** to enable quantization of LLMs, reducing memory consumption for both inference and training, and **liger-kernel** for more efficient training."
       ]
     },
     {
@@ -584,6 +584,23 @@
       },
       "source": [
         "And train!"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Training on a T4 in Colab with the configuration defined in this notebook takes around 13 hours. If you're just experimenting, you can try the following quicker task ([source](https://huggingface.co/learn/llm-course/en/chapter12/5)):\n",
+        "\n",
+        "```python\n",
+        "dataset = load_dataset(\"mlabonne/smoltldr\")\n",
+        "\n",
+        "# Reward function\n",
+        "ideal_length = 50\n",
+        "\n",
+        "def reward_len(completions, **kwargs):\n",
+        "    return [-abs(ideal_length - len(completion)) for completion in completions]\n",
+        "```"
       ]
     },
     {
