Removed Mxfp4Config

--- a/examples/notebooks/grpo_trl_lora_qlora.ipynb
+++ b/examples/notebooks/grpo_trl_lora_qlora.ipynb
@@ -380,7 +380,7 @@
       ],
       "source": [
         "import torch\n",
-        "from transformers import AutoModelForCausalLM, BitsAndBytesConfig, Mxfp4Config\n",
+        "from transformers import AutoModelForCausalLM, BitsAndBytesConfig\n",
         "\n",
         "model = AutoModelForCausalLM.from_pretrained(\n",
         "    model_id,\n",
