Extended to other notebooks

--- a/examples/notebooks/openenv_wordle_grpo.ipynb
+++ b/examples/notebooks/openenv_wordle_grpo.ipynb
@@ -54,7 +54,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install -Uq trl git+https://github.com/meta-pytorch/OpenEnv.git trackio vllm==0.11.2 bitsandbytes"
+    "#!pip install -Uq trl git+https://github.com/meta-pytorch/OpenEnv.git trackio vllm==0.11.2 bitsandbytes\n",
+    "!pip install -Uq trl git+https://github.com/meta-pytorch/OpenEnv.git@bf5e968286e0d49cdc03fd904d48faff4b15a437 openenv_core==0.1.1 trackio vllm==0.11.2 bitsandbytes"
    ]
   },
   {
