--- a/examples/notebooks/grpo_functiongemma_browsergym_openenv.ipynb
+++ b/examples/notebooks/grpo_functiongemma_browsergym_openenv.ipynb
@@ -61,6 +61,7 @@
       "outputs": [],
       "source": [
         "#!pip install -Uq trl[vllm] git+https://github.com/meta-pytorch/OpenEnv.git openenv_core liger-kernel trackio\n",
+        "# Hotfix: https://github.com/huggingface/trl/pull/4740\n",
         "!pip install -Uq trl[vllm] git+https://github.com/meta-pytorch/OpenEnv.git@bf5e968286e0d49cdc03fd904d48faff4b15a437 openenv_core==0.1.1 liger-kernel trackio"
       ]
     },
