--- a/examples/notebooks/openenv_sudoku_grpo.ipynb
+++ b/examples/notebooks/openenv_sudoku_grpo.ipynb
@@ -1030,7 +1030,7 @@
         "    top_p=None,\n",
         "\n",
         "    model_init_kwargs={\n",
-        "      \"use_cache\":\"False\",\n",
+        "      \"use_cache\": False,\n",
         "    }\n",
         ")"
       ]
