Updated based on feedback

--- a/examples/notebooks/openenv_sudoku_grpo.ipynb
+++ b/examples/notebooks/openenv_sudoku_grpo.ipynb
@@ -437,7 +437,7 @@
         "            {\"role\": \"user\", \"content\": user_prompt},\n",
         "        ]\n",
         "        prompt_text = tokenizer.apply_chat_template(\n",
-        "            messages, add_generation_prompt=True, tokenize=False, enable_thinking=False\n",
+        "            messages, add_generation_prompt=True, tokenize=False, enable_thinking=False # `enable_thinking` is usable for the current model but could need to be updated for other models\n",
         "        )\n",
         "\n",
         "        if debug:\n",
@@ -637,7 +637,7 @@
         "        row, col, num = match.groups()\n",
         "        return f\"[{row} {col} {num}]\"\n",
         "\n",
-        "    return \"\"\n",
+        "    return \"\"  # Handled by the environment: missing/invalid moves trigger a \"wrong movement\" message affecting rewards\n",
         "\n",
         "\n",
         "def is_valid_board_state(board_str: str) -> bool:\n",
@@ -1023,7 +1023,7 @@
         "    use_liger_kernel=False,                                    # Enable Liger kernel optimizations for faster training\n",
         "    gradient_checkpointing=True,                               # Save memory by recomputing activations during backprop\n",
         "    gradient_checkpointing_kwargs={\"use_reentrant\": False},    # Prevent warnings with certain models\n",
-        "    # chat_template_kwargs={\"enable_thinking\": False},        # Optional template args for model reasoning\n",
+        "    # chat_template_kwargs={\"enable_thinking\": False},         # Optional template args for model reasoning. We manage this in the rollout function\n",
         "\n",
         "    temperature=0.8,\n",
         "    top_k=10,\n",
@@ -1071,14 +1071,14 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "cQP77cFYKyJm",
-        "outputId": "8ec8a2c5-6e64-4c88-a99b-3b54e2f0f1c5",
         "colab": {
           "referenced_widgets": [
             "c75c6199d00d42b88a0ef49f650317bf",
             "114a42d7d0a74a7a81dad02c21cf41b2"
           ]
-        }
+        },
+        "id": "cQP77cFYKyJm",
+        "outputId": "8ec8a2c5-6e64-4c88-a99b-3b54e2f0f1c5"
       },
       "outputs": [
         {
@@ -5816,8 +5816,6 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "-Vu--VueKyJm",
-        "outputId": "399ccb1e-45bf-4305-ae9d-97edece48b53",
         "colab": {
           "referenced_widgets": [
             "d686d3933bef4ea3a9fb58193495e970",
@@ -5835,7 +5833,9 @@
             "9a460882ac834c8a90d77eec9a2c34ea",
             "7bf3166759f64fcf8968a6d282f8df85"
           ]
-        }
+        },
+        "id": "-Vu--VueKyJm",
+        "outputId": "399ccb1e-45bf-4305-ae9d-97edece48b53"
       },
       "outputs": [
         {
@@ -6763,14 +6763,14 @@
     }
   ],
   "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "gpuType": "A100",
+      "provenance": []
+    },
     "language_info": {
       "name": "python"
-    },
-    "colab": {
-      "provenance": [],
-      "gpuType": "A100"
-    },
-    "accelerator": "GPU"
+    }
   },
   "nbformat": 4,
   "nbformat_minor": 0
