--- a/examples/notebooks/grpo_trl_lora_qlora.ipynb
+++ b/examples/notebooks/grpo_trl_lora_qlora.ipynb
@@ -339,7 +339,7 @@
         "# model_id, output_dir = \"meta-llama/Llama-3.1-8B-Instruct\", \"Llama-3.1-8B-Instruct-GRPO\"             # ✅ ~9.5GB VRAM\n",
         "\n",
         "## LFM2.5\n",
-        "model_id, output_dir = \"LiquidAI/LFM2.5-1.2B-Instruct\", \"LFM2.5-1.2B-Instruct-GRPO\"                                   # ✅ ~1.12 GB VRAM"
+        "# model_id, output_dir = \"LiquidAI/LFM2.5-1.2B-Instruct\", \"LFM2.5-1.2B-Instruct-GRPO\"                                   # ✅ ~1.12 GB VRAM"
       ]
     },
     {
