--- a/examples/notebooks/openenv_sudoku_grpo.ipynb
+++ b/examples/notebooks/openenv_sudoku_grpo.ipynb
@@ -38,7 +38,7 @@
         "## Install dependencies\n",
         "\n",
         "We'll start by installing **TRL**, which automatically includes the main dependencies like **Transformers**.  \n",
-        "We'll also install the **OpenEnv** framework (for the environment), **trackio** (for logging and monitoring training runs), and **vLLM** (for efficient generation)."
+        "We'll also install the **OpenEnv** framework (for the environment) via the HF Space we will use as environment server ([sergiopaniego/textarena](https://huggingface.co/spaces/sergiopaniego/textarena)), **trackio** (for logging and monitoring training runs), and **vLLM** (for efficient generation)."
       ]
     },
     {
@@ -49,8 +49,7 @@
       },
       "outputs": [],
       "source": [
-        "#!pip install -Uq trl[vllm] git+https://github.com/meta-pytorch/OpenEnv.git openenv_core  trackio #liger-kernel\n",
-        "!pip install -Uq trl[vllm] trackio git+https://github.com/meta-pytorch/OpenEnv.git@bf5e968286e0d49cdc03fd904d48faff4b15a437 openenv_core==0.1.1 liger-kernel"
+        "!pip install -Uq trl[vllm] trackio git+https://huggingface.co/spaces/sergiopaniego/textarena liger-kernel"
       ]
     },
     {
@@ -107,7 +106,7 @@
       },
       "outputs": [],
       "source": [
-        "from envs.textarena_env import TextArenaEnv\n",
+        "from textarena_env import TextArenaEnv\n",
         "\n",
         "space_url = \"https://sergiopaniego-textarena.hf.space\"\n",
         "client = TextArenaEnv(base_url=space_url)"
@@ -378,7 +377,7 @@
       "outputs": [],
       "source": [
         "from trl.experimental.openenv import generate_rollout_completions\n",
-        "from envs.textarena_env import TextArenaAction\n",
+        "from textarena_env import TextArenaAction\n",
         "from transformers import AutoTokenizer\n",
         "from collections import defaultdict\n",
         "\n",
