--- a/examples/notebooks/openenv_sudoku_grpo.ipynb
+++ b/examples/notebooks/openenv_sudoku_grpo.ipynb
@@ -1682,7 +1682,7 @@
     "\n",
     "model_name = \"sergiopaniego/sudoku-grpo-qwen3\" # Replace with your HF username or organization\n",
     "\n",
-    "fine_tuned_model = AutoModelForCausalLM.from_pretrained(model_name, dtype=\"auto\", device_map=\"auto\")\n",
+    "fine_tuned_model = AutoModelForCausalLM.from_pretrained(model_name, dtype=\"float32\", device_map=\"auto\")\n",
     "tokenizer = AutoTokenizer.from_pretrained(model_name)"
    ]
   },
