--- a/examples/notebooks/grpo_trl_lora_qlora.ipynb
+++ b/examples/notebooks/grpo_trl_lora_qlora.ipynb
@@ -388,7 +388,7 @@
         "model = AutoModelForCausalLM.from_pretrained(\n",
         "    model_id,\n",
         "    attn_implementation=\"sdpa\",                   # Change to Flash Attention if GPU has support\n",
-        "    dtype=torch.float16,                          # Change to bfloat16 if GPU has support\n",
+        "    dtype=\"float32\",                          # Change to bfloat16 if GPU has support\n",
         "    quantization_config=BitsAndBytesConfig(\n",
         "        load_in_4bit=True,                        # Load the model in 4-bit precision to save memory\n",
         "        bnb_4bit_compute_dtype=torch.float16,     # Data type used for internal computations in quantization\n",
