--- a/examples/notebooks/grpo_functiongemma_browsergym_openenv.ipynb
+++ b/examples/notebooks/grpo_functiongemma_browsergym_openenv.ipynb
@@ -60,7 +60,7 @@
       },
       "outputs": [],
       "source": [
-        "!pip install -Uq trl[vllm] git+https://huggingface.co/spaces/sergiopaniego/browsergym_env liger-kernel trackio"
+        "!pip install -Uq trl[vllm] git+https://huggingface.co/spaces/openenv/browsergym_env liger-kernel trackio"
       ]
     },
     {
@@ -100,7 +100,7 @@
         "\n",
         "[BrowserGym](https://meta-pytorch.org/OpenEnv/environments/browsergym/) is a unified framework for web-based agent tasks, offering multiple benchmarks through a Gymnasium-compatible API. It enables training on simple synthetic tasks with [MiniWoB++](https://github.com/Farama-Foundation/miniwob-plusplus) and evaluation on more complex, realistic tasks with [WebArena](https://github.com/web-arena-x/webarena), [VisualWebArena](https://github.com/web-arena-x/visualwebarena), or [WorkArena](https://github.com/ServiceNow/WorkArena). This setup supports iterative training and assessment of web agents without requiring extensive infrastructure.\n",
         "\n",
-        "BrowserGym supports both LLM and VLM training by providing visual information, including screenshots and DOM data, which can be utilized depending on the model type. This guide focuses on a simple web-based task called *\"click-test\"*, which is part of the MiniWoB++ benchmark of synthetic web tasks. Environments can be run locally, in Docker containers, or accessed remotely via the Hugging Face Hub. For this example, the remote environment [sergiopaniego/browsergym_env](https://huggingface.co/spaces/sergiopaniego/browsergym_env) will be used.\n",
+        "BrowserGym supports both LLM and VLM training by providing visual information, including screenshots and DOM data, which can be utilized depending on the model type. This guide focuses on a simple web-based task called *\"click-test\"*, which is part of the MiniWoB++ benchmark of synthetic web tasks. Environments can be run locally, in Docker containers, or accessed remotely via the Hugging Face Hub. For this example, the remote environment [openenv/browsergym_env](https://huggingface.co/spaces/openenv/browsergym_env) will be used.\n",
         "\n",
         "> Note: Hosted environments on the Hub currently have limited concurrency. For higher reliability or parallel runs, duplicating the Space to your own account is strongly recommended."
       ]
@@ -114,7 +114,7 @@
       "outputs": [],
       "source": [
         "from browsergym_env import BrowserGymEnv\n",
-        "space_url = \"https://sergiopaniego-browsergym-env.hf.space\"\n",
+        "space_url = \"https://openenv-browsergym-env.hf.space\"\n",
         "\n",
         "client = BrowserGymEnv(base_url=space_url)"
       ]
