--- a/examples/notebooks/grpo_trl_lora_qlora.ipynb
+++ b/examples/notebooks/grpo_trl_lora_qlora.ipynb
@@ -1134,7 +1134,7 @@
       "source": [
         "messages = test_dataset[0]['prompt']\n",
         "text = tokenizer.apply_chat_template(\n",
-        "    messages, tokenize=False, add_generation_prompt=True\n",
+        "    messages, add_generation_prompt=True, tokenize=False\n",
         ")\n",
         "model_inputs = tokenizer([text], return_tensors=\"pt\").to(base_model.device)\n",
         "\n",
@@ -1227,7 +1227,7 @@
       ],
       "source": [
         "text = tokenizer.apply_chat_template(\n",
-        "    messages, tokenize=False, add_generation_prompt=True\n",
+        "    messages, add_generation_prompt=True, tokenize=False\n",
         ")\n",
         "model_inputs = tokenizer([text], return_tensors=\"pt\").to(fine_tuned_model.device)\n",
         "\n",
@@ -1611,7 +1611,7 @@
       "source": [
         "messages = test_dataset[0]['prompt']\n",
         "# Alternatively, use llm.chat()\n",
-        "prompt = hf_tokenizer.apply_chat_template(messages, tokenize=False, add_generation_prompt=True)\n",
+        "prompt = hf_tokenizer.apply_chat_template(messages, add_generation_prompt=True, tokenize=False)\n",
         "\n",
         "outputs = llm.generate(\n",
         "    {\"prompt\": prompt},\n",
