--- a/examples/notebooks/sft_trl_lora_qlora.ipynb
+++ b/examples/notebooks/sft_trl_lora_qlora.ipynb
@@ -878,7 +878,7 @@
    ],
    "source": [
     "text = tokenizer.apply_chat_template(\n",
-    "    messages, tokenize=False, add_generation_prompt=True\n",
+    "    messages, add_generation_prompt=True, tokenize=False\n",
     ")\n",
     "model_inputs = tokenizer([text], return_tensors=\"pt\").to(base_model.device)\n",
     "\n",
@@ -935,7 +935,7 @@
    ],
    "source": [
     "text = tokenizer.apply_chat_template(\n",
-    "    messages, tokenize=False, add_generation_prompt=True\n",
+    "    messages, add_generation_prompt=True, tokenize=False\n",
     ")\n",
     "model_inputs = tokenizer([text], return_tensors=\"pt\").to(fine_tuned_model.device)\n",
     "\n",
@@ -1108,7 +1108,7 @@
    ],
    "source": [
     "# Alternatively, use llm.chat()\n",
-    "prompt = hf_tokenizer.apply_chat_template(messages, tokenize=False, add_generation_prompt=True)\n",
+    "prompt = hf_tokenizer.apply_chat_template(messages, add_generation_prompt=True, tokenize=False)\n",
     "\n",
     "outputs = llm.generate(\n",
     "    {\"prompt\": prompt},\n",
