--- a/examples/notebooks/openenv_wordle_grpo.ipynb
+++ b/examples/notebooks/openenv_wordle_grpo.ipynb
@@ -113,7 +113,7 @@
       },
       "outputs": [
         {
-          "name": "stderr",
+          "name": "stdout",
           "output_type": "stream",
           "text": [
             "/usr/local/lib/python3.12/dist-packages/jupyter_client/session.py:203: DeprecationWarning: datetime.datetime.utcnow() is deprecated and scheduled for removal in a future version. Use timezone-aware objects to represent datetimes in UTC: datetime.datetime.now(datetime.UTC).\n",
@@ -157,7 +157,7 @@
       },
       "outputs": [
         {
-          "name": "stderr",
+          "name": "stdout",
           "output_type": "stream",
           "text": [
             "/usr/local/lib/python3.12/dist-packages/jupyter_client/session.py:203: DeprecationWarning: datetime.datetime.utcnow() is deprecated and scheduled for removal in a future version. Use timezone-aware objects to represent datetimes in UTC: datetime.datetime.now(datetime.UTC).\n",
@@ -346,9 +346,10 @@
         "max_new_tokens = 8\n",
         "max_turns = 6\n",
         "\n",
-        "def rollout_func(prompts, trainer):\n",
+        "async def rollout_func(prompts, trainer):\n",
         "    \"\"\"\n",
-        "    Rollout function for GRPO training with environment interaction.\n",
+        "    Async rollout function for GRPO training with environment interaction.\n",
+        "    TRL handles the event loop automatically.\n",
         "\n",
         "    This function is called by GRPOTrainer to generate completions and compute rewards.\n",
         "    It uses trainer.generate_rollout_completions() for inference.\n",
@@ -369,7 +370,7 @@
         "    format_rewards = []\n",
         "\n",
         "    for prompt_text in prompts:\n",
-        "        episode = rollout_once(\n",
+        "        episode = await rollout_once(\n",
         "            trainer=trainer,\n",
         "            env=env,\n",
         "            tokenizer=tokenizer,\n",
@@ -444,8 +445,8 @@
         "from textarena_env.rewards import extract_feedback_counts, extract_guess, extract_wordle_feedback\n",
         "from trl.experimental.openenv import generate_rollout_completions\n",
         "\n",
-        "def rollout_once(trainer, env, tokenizer, dataset_prompt, system_prompt, max_turns, max_new_tokens):\n",
-        "    result = env.reset()\n",
+        "async def rollout_once(trainer, env, tokenizer, dataset_prompt, system_prompt, max_turns, max_new_tokens):\n",
+        "    result = await env.reset()\n",
         "    observation = result.observation\n",
         "\n",
         "    prompt_ids = []\n",
@@ -518,7 +519,7 @@
         "        guess = extract_guess(completion_text)\n",
         "        model_outputs.append(completion_text.strip())  # Store raw model output for format reward\n",
         "\n",
-        "        result = env.step(TextArenaAction(message=guess))\n",
+        "        result = await env.step(TextArenaAction(message=guess))\n",
         "\n",
         "        raw_rewards.append(float(result.reward or 0.0))\n",
         "        observation = result.observation\n",
@@ -825,7 +826,7 @@
       },
       "outputs": [
         {
-          "name": "stderr",
+          "name": "stdout",
           "output_type": "stream",
           "text": [
             "/usr/local/lib/python3.12/dist-packages/jupyter_client/session.py:203: DeprecationWarning: datetime.datetime.utcnow() is deprecated and scheduled for removal in a future version. Use timezone-aware objects to represent datetimes in UTC: datetime.datetime.now(datetime.UTC).\n",
@@ -847,7 +848,7 @@
           "output_type": "display_data"
         },
         {
-          "name": "stderr",
+          "name": "stdout",
           "output_type": "stream",
           "text": [
             "/tmp/ipython-input-3695224185.py:3: UserWarning: You are importing from 'rollout_func', which is an experimental feature. This API may change or be removed at any time without prior notice. Silence this warning by setting environment variable TRL_EXPERIMENTAL_SILENCE=1.\n",
@@ -872,7 +873,7 @@
           "output_type": "display_data"
         },
         {
-          "name": "stderr",
+          "name": "stdout",
           "output_type": "stream",
           "text": [
             "Capturing CUDA graphs (mixed prefill-decode, PIECEWISE):   0%|          | 0/19 [00:00<?, ?it/s]/usr/local/lib/python3.12/dist-packages/jupyter_client/session.py:203: DeprecationWarning: datetime.datetime.utcnow() is deprecated and scheduled for removal in a future version. Use timezone-aware objects to represent datetimes in UTC: datetime.datetime.now(datetime.UTC).\n",
@@ -957,7 +958,7 @@
       },
       "outputs": [
         {
-          "name": "stderr",
+          "name": "stdout",
           "output_type": "stream",
           "text": [
             "The tokenizer has new PAD/BOS/EOS tokens that differ from the model config and generation config. The model config and generation config were aligned accordingly, being updated with the tokenizer's values. Updated tokens: {'bos_token_id': None, 'pad_token_id': 151645}.\n"
@@ -1393,7 +1394,7 @@
           "output_type": "display_data"
         },
         {
-          "name": "stderr",
+          "name": "stdout",
           "output_type": "stream",
           "text": [
             "/usr/local/lib/python3.12/dist-packages/jupyter_client/session.py:203: DeprecationWarning: datetime.datetime.utcnow() is deprecated and scheduled for removal in a future version. Use timezone-aware objects to represent datetimes in UTC: datetime.datetime.now(datetime.UTC).\n",
@@ -1426,7 +1427,7 @@
           ]
         },
         {
-          "name": "stderr",
+          "name": "stdout",
           "output_type": "stream",
           "text": [
             "/usr/local/lib/python3.12/dist-packages/jupyter_client/session.py:203: DeprecationWarning: datetime.datetime.utcnow() is deprecated and scheduled for removal in a future version. Use timezone-aware objects to represent datetimes in UTC: datetime.datetime.now(datetime.UTC).\n",
@@ -1594,7 +1595,7 @@
           "output_type": "display_data"
         },
         {
-          "name": "stderr",
+          "name": "stdout",
           "output_type": "stream",
           "text": [
             "No files have been modified since last commit. Skipping to prevent empty commit.\n",
@@ -1686,7 +1687,7 @@
           "output_type": "display_data"
         },
         {
-          "name": "stderr",
+          "name": "stdout",
           "output_type": "stream",
           "text": [
             "No files have been modified since last commit. Skipping to prevent empty commit.\n",
@@ -2022,14 +2023,14 @@
     }
   ],
   "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "gpuType": "A100",
+      "provenance": []
+    },
     "language_info": {
       "name": "python"
-    },
-    "colab": {
-      "provenance": [],
-      "gpuType": "A100"
-    },
-    "accelerator": "GPU"
+    }
   },
   "nbformat": 4,
   "nbformat_minor": 5
