--- a/examples/notebooks/grpo_functiongemma_browsergym_openenv.ipynb
+++ b/examples/notebooks/grpo_functiongemma_browsergym_openenv.ipynb
@@ -60,7 +60,19 @@
       },
       "outputs": [],
       "source": [
-        "!pip install -Uq trl[vllm] git+https://huggingface.co/spaces/openenv/browsergym_env liger-kernel trackio"
+        "!pip install -Uq trl[vllm] git+https://huggingface.co/spaces/openenv/browsergym_env liger-kernel trackio nest_asyncio"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# nest_asyncio is required to run async code in Colab's event loop\n",
+        "import nest_asyncio\n",
+        "\n",
+        "nest_asyncio.apply()"
       ]
     },
     {
