--- a/examples/notebooks/openenv_wordle_grpo.ipynb
+++ b/examples/notebooks/openenv_wordle_grpo.ipynb
@@ -56,7 +56,20 @@
       },
       "outputs": [],
       "source": [
-        "!pip install -Uq trl[vllm] git+https://huggingface.co/spaces/sergiopaniego/wordle trackio"
+        "!pip install -Uq trl[vllm] git+https://huggingface.co/spaces/sergiopaniego/wordle trackio nest_asyncio"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "4a7b2dc2",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# nest_asyncio is required to run async code in Colab's event loop\n",
+        "import nest_asyncio\n",
+        "\n",
+        "nest_asyncio.apply()"
       ]
     },
     {
@@ -739,7 +752,7 @@
       "source": [
         "from trl import GRPOConfig\n",
         "\n",
-        "output_dir = \"wordle-grpo-Qwen3-1.7B-test\"\n",
+        "output_dir = \"wordle-grpo-Qwen3-1.7B\"\n",
         "\n",
         "grpo_config = GRPOConfig(\n",
         "    # Training schedule / optimization\n",
@@ -794,20 +807,6 @@
         "The trainer coordinates the interaction between the model and the environment, applies the reward signals, and updates the policy.\n",
         "\n",
         "Finally, we call `trainer.train()` to start the fine-tuning process and let the model learn to play Wordle through feedback and iteration."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "FeBMCppH7rAc",
-      "metadata": {
-        "id": "FeBMCppH7rAc"
-      },
-      "outputs": [],
-      "source": [
-        "import sys\n",
-        "sys.stdout.fileno = lambda: 1\n",
-        "sys.stderr.fileno = lambda: 2"
       ]
     },
     {
