All cases managed from TRL

--- a/examples/notebooks/openenv_wordle_grpo.ipynb
+++ b/examples/notebooks/openenv_wordle_grpo.ipynb
@@ -56,20 +56,7 @@
       },
       "outputs": [],
       "source": [
-        "!pip install -Uq trl[vllm] git+https://huggingface.co/spaces/sergiopaniego/wordle trackio nest_asyncio"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "4a7b2dc2",
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# nest_asyncio is required to run async code in Colab's event loop\n",
-        "import nest_asyncio\n",
-        "\n",
-        "nest_asyncio.apply()"
+        "!pip install -Uq trl[vllm] git+https://huggingface.co/spaces/sergiopaniego/wordle trackio"
       ]
     },
     {
@@ -1702,7 +1689,7 @@
               "CommitInfo(commit_url='https://huggingface.co/sergiopaniego/wordle-grpo-Qwen3-1.7B-test/commit/2d7a27066ef244796a079cbf08fa6656af426145', commit_message='End of training', commit_description='', oid='2d7a27066ef244796a079cbf08fa6656af426145', pr_url=None, repo_url=RepoUrl('https://huggingface.co/sergiopaniego/wordle-grpo-Qwen3-1.7B-test', endpoint='https://huggingface.co', repo_type='model', repo_id='sergiopaniego/wordle-grpo-Qwen3-1.7B-test'), pr_revision=None, pr_num=None)"
             ]
           },
-          "execution_count": 15,
+          "execution_count": null,
           "metadata": {},
           "output_type": "execute_result"
         }
