--- a/examples/notebooks/openenv_sudoku_grpo.ipynb
+++ b/examples/notebooks/openenv_sudoku_grpo.ipynb
@@ -49,19 +49,7 @@
       },
       "outputs": [],
       "source": [
-        "!pip install -Uq trl[vllm] trackio git+https://huggingface.co/spaces/openenv/sudoku liger-kernel nest_asyncio"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# nest_asyncio is required to run async code in Colab's event loop\n",
-        "import nest_asyncio\n",
-        "\n",
-        "nest_asyncio.apply()"
+        "!pip install -Uq trl[vllm] trackio git+https://huggingface.co/spaces/openenv/sudoku liger-kernel"
       ]
     },
     {
