Renamed to OpenEnv

--- a/examples/notebooks/openenv_wordle_grpo.ipynb
+++ b/examples/notebooks/openenv_wordle_grpo.ipynb
@@ -44,7 +44,7 @@
                 "## Install dependencies\n",
                 "\n",
                 "We'll start by installing **TRL**, which automatically includes the main dependencies like **Transformers**.  \n",
-                "We'll also install the **OpenEnv** framework via the remote deployent env at [sergiopaniego/wordle](https://huggingface.co/spaces/sergiopaniego/wordle) (for the environment), **trackio** (for logging and monitoring training runs), and **vLLM** (for efficient generation)."
+                "We'll also install the **OpenEnv** framework via the remote deployent env at [openenv/wordle](https://huggingface.co/spaces/openenv/wordle) (for the environment), **trackio** (for logging and monitoring training runs), and **vLLM** (for efficient generation)."
             ]
         },
         {
@@ -56,7 +56,7 @@
             },
             "outputs": [],
             "source": [
-                "!pip install -Uq trl[vllm] git+https://huggingface.co/spaces/sergiopaniego/wordle trackio"
+                "!pip install -Uq trl[vllm] git+https://huggingface.co/spaces/openenv/wordle trackio"
             ]
         },
         {
@@ -97,7 +97,7 @@
                 "Let's begin by setting up the environment that will be used during training.  \n",
                 "For this task, we'll rely on the **TextArena** environment from **OpenEnv**, which exposes a familiar Gymnasium-style API (`reset()`, `step()`, etc.) to simplify interaction.\n",
                 "\n",
-                "In this example, we'll connect to the hosted environment at [sergiopaniego/wordle](https://huggingface.co/spaces/sergiopaniego/wordle).  \n",
+                "In this example, we'll connect to the hosted environment at [openenv/wordle](https://huggingface.co/spaces/openenv/wordle).  \n",
                 "For production use or custom configurations, we **strongly recommend** running the environment locally via Docker. The hosted versions on the Hub currently have limited concurrency support, so duplicating the Space to your own account is the preferred approach in those cases.\n",
                 "\n",
                 "For more information, refer to the [TRL-OpenEnv documentation](https://huggingface.co/docs/trl/main/en/openenv).\n"
@@ -124,9 +124,9 @@
             "source": [
                 "from textarena_env import TextArenaEnv\n",
                 "\n",
-                "wordle_url = \"https://sergiopaniego-wordle.hf.space\" # Duplicate the Space and update this!\n",
+                "wordle_url = \"https://openenv-wordle.hf.space\" # Duplicate the Space and update this!\n",
                 "env = TextArenaEnv(base_url=wordle_url)\n",
-                "# wordle_url = \"sergiopaniego/wordle\"\n",
+                "# wordle_url = \"openenv/wordle\"\n",
                 "# env = TextArenaEnv.from_hub(repo_id=wordle_url)"
             ]
         },
@@ -736,47 +736,47 @@
             },
             "outputs": [],
             "source": [
-        "from trl import GRPOConfig\n",
-        "\n",
-        "output_dir = \"wordle-grpo-Qwen3-1.7B-test\"\n",
-        "\n",
-        "grpo_config = GRPOConfig(\n",
-        "    # Training schedule / optimization\n",
-        "    num_train_epochs = 1,                     # Number of full dataset passes\n",
-        "    learning_rate = 1e-6,                     # Learning rate for the optimizer\n",
-        "    gradient_accumulation_steps = 64,         # Accumulate gradients over multiple steps\n",
-        "    per_device_train_batch_size = 1,          # Batch size per GPU (number of prompts processed together)\n",
-        "    warmup_steps = 10,                        # Steps for learning rate warmup\n",
-        "    optim=\"adamw_torch\",                      # Optimizer\n",
-        "    max_grad_norm=1.0,                        # Clip gradients to prevent explosion\n",
-        "\n",
-        "    # GRPO configuration\n",
-        "    num_generations = 2,                      # Number of rollout episodes per prompt (for variance reduction)\n",
-        "    max_completion_length=1024,               # Full episode length, not per-turn\n",
-        "    log_completions = False,                  # Log completions for debugging\n",
-        "\n",
-        "    # vLLM configuration\n",
-        "    use_vllm = True,                          # Enable vLLM for faster inference during rollouts\n",
-        "    vllm_mode = \"colocate\",                   # Run vLLM in colocate mode (same process as training)\n",
-        "    vllm_gpu_memory_utilization = 0.15,       # Fraction of GPU memory reserved for vLLM inference\n",
-        "    vllm_max_model_length=3072,               # Maximum context length for vLLM\n",
-        "    vllm_importance_sampling_mode=\"token_truncate\",  # Less aggressive than default sequence_mask\n",
-        "\n",
-        "    # Logging / reporting\n",
-        "    output_dir = output_dir,                  # Directory for checkpoints and logs\n",
-        "    report_to=\"trackio\",                      # Experiment tracking tool (integrates with HF Spaces)\n",
-        "    trackio_space_id = output_dir,            # HF Space where experiment tracking will be saved\n",
-        "    logging_steps = 1,                        # Log metrics every N steps\n",
-        "    save_steps = 10,                          # Interval for saving checkpoints\n",
-        "    save_total_limit=1,                       # Max number of checkpoints to save\n",
-        "\n",
-        "    # Memory optimization\n",
-        "    gradient_checkpointing = True,            # Enable activation recomputation to save memory\n",
-        "\n",
-        "    # Hub integration\n",
-        "    push_to_hub = True,                       # Set True to automatically push model to Hugging Face Hub\n",
-        ")"
-      ]
+                "from trl import GRPOConfig\n",
+                "\n",
+                "output_dir = \"wordle-grpo-Qwen3-1.7B-test\"\n",
+                "\n",
+                "grpo_config = GRPOConfig(\n",
+                "    # Training schedule / optimization\n",
+                "    num_train_epochs = 1,                     # Number of full dataset passes\n",
+                "    learning_rate = 1e-6,                     # Learning rate for the optimizer\n",
+                "    gradient_accumulation_steps = 64,         # Accumulate gradients over multiple steps\n",
+                "    per_device_train_batch_size = 1,          # Batch size per GPU (number of prompts processed together)\n",
+                "    warmup_steps = 10,                        # Steps for learning rate warmup\n",
+                "    optim=\"adamw_torch\",                      # Optimizer\n",
+                "    max_grad_norm=1.0,                        # Clip gradients to prevent explosion\n",
+                "\n",
+                "    # GRPO configuration\n",
+                "    num_generations = 2,                      # Number of rollout episodes per prompt (for variance reduction)\n",
+                "    max_completion_length=1024,               # Full episode length, not per-turn\n",
+                "    log_completions = False,                  # Log completions for debugging\n",
+                "\n",
+                "    # vLLM configuration\n",
+                "    use_vllm = True,                          # Enable vLLM for faster inference during rollouts\n",
+                "    vllm_mode = \"colocate\",                   # Run vLLM in colocate mode (same process as training)\n",
+                "    vllm_gpu_memory_utilization = 0.15,       # Fraction of GPU memory reserved for vLLM inference\n",
+                "    vllm_max_model_length=3072,               # Maximum context length for vLLM\n",
+                "    vllm_importance_sampling_mode=\"token_truncate\",  # Less aggressive than default sequence_mask\n",
+                "\n",
+                "    # Logging / reporting\n",
+                "    output_dir = output_dir,                  # Directory for checkpoints and logs\n",
+                "    report_to=\"trackio\",                      # Experiment tracking tool (integrates with HF Spaces)\n",
+                "    trackio_space_id = output_dir,            # HF Space where experiment tracking will be saved\n",
+                "    logging_steps = 1,                        # Log metrics every N steps\n",
+                "    save_steps = 10,                          # Interval for saving checkpoints\n",
+                "    save_total_limit=1,                       # Max number of checkpoints to save\n",
+                "\n",
+                "    # Memory optimization\n",
+                "    gradient_checkpointing = True,            # Enable activation recomputation to save memory\n",
+                "\n",
+                "    # Hub integration\n",
+                "    push_to_hub = True,                       # Set True to automatically push model to Hugging Face Hub\n",
+                ")"
+            ]
         },
         {
             "cell_type": "markdown",
@@ -2022,14 +2022,14 @@
         }
     ],
     "metadata": {
+        "accelerator": "GPU",
+        "colab": {
+            "gpuType": "A100",
+            "provenance": []
+        },
         "language_info": {
             "name": "python"
-        },
-        "colab": {
-            "provenance": [],
-            "gpuType": "A100"
-        },
-        "accelerator": "GPU"
+        }
     },
     "nbformat": 4,
     "nbformat_minor": 5
