same for notebook

--- a/examples/notebooks/sft_tool_calling.ipynb
+++ b/examples/notebooks/sft_tool_calling.ipynb
@@ -84,7 +84,7 @@
     }
    ],
    "source": [
-    "!pip install -Uq \"trl[peft]\" trackio bitsandbytes"
+    "!pip install -Uq \"trl[peft]\" trackio bitsandbytes liger-kernel"
    ]
   },
   {
@@ -187,34 +187,41 @@
    "outputs": [],
    "source": [
     "import json\n",
-    "from transformers.utils import get_json_schema\n",
     "\n",
-    "# --- Tool Definitions ---\n",
-    "def search_knowledge_base(query: str) -> str:\n",
-    "    \"\"\"\n",
-    "    Search internal company documents, policies and project data.\n",
-    "\n",
-    "    Args:\n",
-    "        query: query string\n",
-    "    \"\"\"\n",
-    "    return \"Internal Result\"\n",
-    "\n",
-    "def search_google(query: str) -> str:\n",
-    "    \"\"\"\n",
-    "    Search public information.\n",
-    "\n",
-    "    Args:\n",
-    "        query: query string\n",
-    "    \"\"\"\n",
-    "    return \"Public Result\"\n",
-    "\n",
-    "\n",
-    "TOOLS = [get_json_schema(search_knowledge_base), get_json_schema(search_google)]\n",
+    "# These are the tool schemas that are used in the dataset\n",
+    "TOOLS = [\n",
+    "    {\n",
+    "        \"type\": \"function\",\n",
+    "        \"function\": {\n",
+    "            \"name\": \"search_knowledge_base\",\n",
+    "            \"description\": \"Search internal company documents, policies and project data.\",\n",
+    "            \"parameters\": {\n",
+    "                \"type\": \"object\",\n",
+    "                \"properties\": {\"query\": {\"type\": \"string\", \"description\": \"query string\"}},\n",
+    "                \"required\": [\"query\"],\n",
+    "            },\n",
+    "            \"return\": {\"type\": \"string\"},\n",
+    "        },\n",
+    "    },\n",
+    "    {\n",
+    "        \"type\": \"function\",\n",
+    "        \"function\": {\n",
+    "            \"name\": \"search_google\",\n",
+    "            \"description\": \"Search public information.\",\n",
+    "            \"parameters\": {\n",
+    "                \"type\": \"object\",\n",
+    "                \"properties\": {\"query\": {\"type\": \"string\", \"description\": \"query string\"}},\n",
+    "                \"required\": [\"query\"],\n",
+    "            },\n",
+    "            \"return\": {\"type\": \"string\"},\n",
+    "        },\n",
+    "    },\n",
+    "]\n",
     "\n",
     "def create_conversation(sample):\n",
     "    return {\n",
-    "        \"messages\": [\n",
-    "            {\"role\": \"user\", \"content\": sample[\"user_content\"]},\n",
+    "        \"prompt\": [{\"role\": \"user\", \"content\": sample[\"user_content\"]}],\n",
+    "        \"completion\": [\n",
     "            {\n",
     "                \"role\": \"assistant\",\n",
     "                \"tool_calls\": [\n",
@@ -240,7 +247,7 @@
    },
    "outputs": [],
    "source": [
-    "dataset = dataset.map(create_conversation, remove_columns=dataset.features, batched=False)\n",
+    "dataset = dataset.map(create_conversation, remove_columns=dataset.features)\n",
     "\n",
     "# Split dataset into 50% training samples and 50% test samples\n",
     "dataset = dataset.train_test_split(test_size=0.5, shuffle=True)"
@@ -429,11 +436,9 @@
    },
    "outputs": [],
    "source": [
-    "from transformers import AutoTokenizer\n",
+    "from pathlib import Path\n",
     "\n",
-    "tokenizer = AutoTokenizer.from_pretrained(model_id)\n",
-    "with open(\"tiny_aya_chat_template.jinja\", encoding=\"utf-8\") as chat_template_file:\n",
-    "    tokenizer.chat_template = chat_template_file.read()"
+    "chat_template_path=str(Path(__file__).parent / \"tiny_aya_chat_template.jinja\"),"
    ]
   },
   {
@@ -493,6 +498,7 @@
     "    num_train_epochs = 3,                 # 3 full passes over the dataset\n",
     "    learning_rate = 2e-4,                 # Learning rate for the optimizer\n",
     "    optim = \"paged_adamw_8bit\",           # Optimizer\n",
+    "    chat_template_path=chat_template_path,\n",
     "\n",
     "    # Logging / reporting\n",
     "    logging_steps=1,                      # Log training metrics every N steps\n",
@@ -587,10 +593,8 @@
     "\n",
     "trainer = SFTTrainer(\n",
     "    model=model,\n",
-    "    processing_class=tokenizer,\n",
     "    args=training_args,\n",
     "    train_dataset=dataset['train'],\n",
-    "    eval_dataset=dataset['test'],\n",
     "    peft_config=peft_config\n",
     ")"
    ]
@@ -1016,7 +1020,6 @@
    ],
    "source": [
     "trainer.save_model(output_dir)\n",
-    "tokenizer.save_pretrained(output_dir)\n",
     "trainer.push_to_hub(dataset_name=dataset_name)"
    ]
   },
@@ -1131,11 +1134,9 @@
    },
    "outputs": [],
    "source": [
-    "def generate_prediction(user_query):\n",
-    "    messages = [{\"role\": \"user\", \"content\": user_query}]\n",
-    "\n",
+    "def generate_prediction(prompt):\n",
     "    text = tokenizer.apply_chat_template(\n",
-    "        messages, tools=TOOLS, tokenize=False, add_generation_prompt=True\n",
+    "        prompt, tools=TOOLS, tokenize=False, add_generation_prompt=True\n",
     "    )\n",
     "    model_inputs = tokenizer([text], return_tensors=\"pt\").to(model.device)\n",
     "\n",
@@ -1180,9 +1181,9 @@
     }
    ],
    "source": [
-    "sample_test_data = dataset['test'][0] # Get a sample from the test set\n",
+    "sample_test_data = dataset[\"test\"][0] # Get a sample from the test set\n",
     "\n",
-    "user_content = sample_test_data['messages'][0]['content']\n",
+    "user_content = sample_test_data[\"prompt\"]\n",
     "\n",
     "print(f\"User Query: {user_content}\")\n",
     "\n",
